test/tests/bad/unification-failed.carth
;; UnificationFailed

(data Integ (Integ Int))

(def type-mismatch (Integ True))
